--- a/Challenge-4.html
+++ b/Challenge-4.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="img/trai.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top"> Entrenamientos
+                    <img src="img/trai.jpg" alt="" class="d-inline-block align-text-top"> Entrenamientos
                 </a>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -182,6 +182,22 @@
             <button type="button" class="btn btn-outline-light">Click here</button>
         </div>
     </div>
+    <div class="container challenge-4-exito">
+        <div class="item">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/K3npKVk2Y38" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="item">
+            <h1>Casos de exito</h1>
+            <p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, numquam temporibus? Repudiandae maxime labore illum nobis aliquam ad minus sint quibusdam accusamus, laborum dolore aliquid iste sit maiores
+                ea, tempora voluptates id eius tempore perferendis ipsam veniam! Quam sunt quasi magnam, nesciunt totam soluta. Ipsum ea rem repellat provident nisi. consectetur, adipisicing elit. Voluptas, maiores!</p>
+            <span class="blockquote-footer">John Donahoe <cite title="Source Title">'CEO de Nike'.</cite></span>
+        </div>
+        <div class="item">
+            <p>" LO QUE SEPARA EL DISEÑO DEL ARTE ES QUE EL DISEÑO ESTÁ DESTINADO A SER... FUNCIONAL"</p>
+            <span class="blockquote-footer">Cameron Moll</span>
+
+        </div>
+    </div>
     <footer class="Challenge-4-Footer">
         <div class="item">
             <div class="card">
@@ -192,11 +208,11 @@
             <ul class="ul-footer">
                 <span class="span-footer">Explora</span>
                 <hr class="linea-h">
-                <li>- Inicio</li>
-                <li>- Sobre nosotros</li>
-                <li>- Contacto</li>
-                <li>- Productos</li>
-                <li>- Servicios</li>
+                <li>→Inicio</li>
+                <li>→Sobre nosotros</li>
+                <li>→Contacto</li>
+                <li>→Productos</li>
+                <li>→Servicios</li>
             </ul>
         </div>
         <div class="item">
