--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="d-flex">
+                <form action="Login.html" class="d-flex">
                     <input class="form-control me-2" type="search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    <button class="btn btn-outline-primary" type="submit">Login</button>
                 </form>
             </div>
         </div>
