--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <li><a class="dropdown-item" href="Challenge-2.html">2</a></li>
                             <li><a class="dropdown-item" href="Challenge-3.html">3</a></li>
                             <li><a class="dropdown-item" href="Challenge-4.html">4</a></li>
+                            <li><a class="dropdown-item" href="Ecommerce.html">5</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
